// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-smooch-attachments Everything is successful File is found passes in the correct arguments to SmoochCore 1`] = `
Array [
  Array [
    Object {
      "keyId": "id",
      "scope": "app",
      "secret": "secret",
      "serviceUrl": "mock-smooch-api-url",
    },
  ],
  Array [
    Object {
      "keyId": "id",
      "scope": "app",
      "secret": "secret",
      "serviceUrl": "mock-smooch-api-url",
    },
  ],
]
`;

exports[`delete-smooch-attachments Everything is successful File is found passes in the correct arguments to secretClient.getSecretValue() 1`] = `
Array [
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
]
`;

exports[`delete-smooch-attachments Everything is successful File is found passes in the correct arguments to smooch.appUsers.getMessages 1`] = `
Array [
  Array [
    Object {
      "appId": "667802d8-2260-436c-958a-2ee0f71f73f1",
      "userId": "667802d8-2260-436c-958a-2ee0f71f73f2",
    },
  ],
  Array [
    Object {
      "appId": "667802d8-2260-436c-958a-2ee0f71f73f1",
      "userId": "667802d8-2260-436c-958a-2ee0f71f73f2",
    },
  ],
]
`;

exports[`delete-smooch-attachments Everything is successful File is found passes in the correct arguments to smooch.attachments.delete 1`] = `
Array [
  Array [
    Object {
      "appId": "667802d8-2260-436c-958a-2ee0f71f73f1",
      "mediaUrl": "media-url",
    },
  ],
]
`;

exports[`delete-smooch-attachments throws an error when there is a problem retrieving digital channels credentials (SmoochCore) 1`] = `"Error retrieving digital channels credentials"`;

exports[`delete-smooch-attachments throws an error when there is a problem retrieving digital channels credentials (thrown by SmoochCore) 1`] = `"received is not a function"`;

exports[`delete-smooch-attachments throws an error when there is a problem retrieving digital channels credentials 1`] = `"Error retrieving digital channels credentials"`;

exports[`delete-smooch-attachments throws an error when there is problem deleting smooch attachment 1`] = `"Error trying to delete smooch attachment"`;

exports[`delete-smooch-attachments throws an error when there is problem fetching interaction messages 1`] = `"Error fetching interaction messages"`;
